[package]
name = "solana-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "=1.14.5"
clap = { version = "4.0.10", features = ["derive"] }
solana-clap-v3-utils = "1.14.5"
solana-client = "1.14.5"
serde = "1.0.145"
base64 = "0.13.0"
bincode = "1.3.3"
